Fixed various formatting issues related to alignment.

--- a/css/tufte.css
+++ b/css/tufte.css
@@ -201,7 +201,8 @@ p, footer, table { width: 55%; }
 
 div.fullwidth, table.fullwidth { width: 100%; }
 
-div.table-wrapper { text-align: center; }
+div.table-wrapper { overflow-x: auto;
+                    font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", sans-serif; }
 
 .sans { font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
         letter-spacing: .03em; }
